--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -25,6 +25,13 @@
   font-size: 2em;
 }
 
+.total2 {
+  display: flex;
+  justify-content: center;
+  font-size: 2em;
+  margin-bottom: 1em;
+}
+
 .nextBtn {
   display: flex;
   justify-content: center;
@@ -53,4 +60,23 @@ form {
 .delivOption {
   display: flex;
   margin-bottom: 1em;
+}
+
+table {
+  width: 30%;
+  margin: auto;
+  margin-bottom: 1em;
+}
+
+th {
+  height: 3em;
+}
+
+td {
+  height: 1.5em;
+}
+
+table, th, td {
+  border: 1px solid;
+  border-collapse: collapse;
 }
